# Federation-Core

./: .gitignore  Cargo.toml  MANIFESTO.md  README.md  VISION.md  WHITE_PAPER.md  WHITE_PAPER_v0.2_PROTOCOL.md  check-output.txt
src/: ONTOLOGY.md  adaptive_censor.rs  adaptive_censor.rs.backup  api.rs  chacha.rs  consensus.rs  constants.rs  credits.rs  dag.rs  dashboard.rs  ethics.rs  federated.rs  governance.rs  inventory.rs  main.rs  market.rs  mint.rs  mirage.rs  mutation.rs  network.rs  neural_node.rs  noise.rs  oracle.rs  overlay.rs  p2p.rs  phase01_neural.rs  pools.rs  proposal_engine.rs  reputation.rs  robot_mesh.rs  routing.rs  satellite_pulse.rs  shard.rs  simulator.rs  swarm.rs  tensor.rs  transport.rs  vault.rs  veil_breaker.rs  war2.rs  (+2 more)
src/demos/: mod.rs  phase01_neural.rs  phase01_neural.rs.old  phase01_neural.rs.working  phase02_crypto.rs  phase03_ethics.rs  phase04_governance.rs  phase05_credits.rs  phase06_reputation.rs  phase07_mint.rs  phase08_pools.rs  phase09_chacha.rs  phase10_dashboard.rs  phase11_war.rs
